# RAG_QUERY_APPLICATION

./: .env.example  .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  retrive.py
extract_data/: extract_data.py
index/: index.py
vectorstore/: vectorstre.py
